Interactive latent space local distribution app

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,4 @@ extend-select =
 console_scripts =
     castor-runner = castor.runner:main
     latent-space-manipulation = castor.apps.autoencoder.latent_space_manipulation:main
+    latent-space-local-distribution = castor.apps.autoencoder.latent_space_local_distribution:main
