WIP: Interactive latent space global distribution app
WIP since computing the 2D embedding is still prohibitively costly in terms of computation

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,4 @@ console_scripts =
     castor-runner = castor.runner:main
     latent-space-manipulation = castor.apps.autoencoder.latent_space_manipulation:main
     latent-space-local-distribution = castor.apps.autoencoder.latent_space_local_distribution:main
+    latent-space-global-distribution = castor.apps.autoencoder.latent_space_global_distribution:main
