--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,4 @@ console_scripts =
     latent-space-manipulation = castor.apps.autoencoder.latent_space_manipulation:main
     latent-space-local-distribution = castor.apps.autoencoder.latent_space_local_distribution:main
     latent-space-global-distribution = castor.apps.autoencoder.latent_space_global_distribution:main
+    latent-space-attributes-sweeper = castor.apps.autoencoder.latent_space_attributes_sweeper:main
