Added Hydra configs for temporal metrics results processors

--- a/castor/config/experiment/camus/segmentation.yaml
+++ b/castor/config/experiment/camus/segmentation.yaml
@@ -3,6 +3,7 @@
 defaults:
   - /data/results_processors@_global_.results_processors:
     - camus/image_attributes_plot
+    - camus/image_temporal_metrics
   - override /task: segmentation
   - override /data: camus
 
