Added `castor-runner` entry-point to have knowlege of castor configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,7 @@ ignore =
     W503  # W503 - line break before binary operator, need for black
 extend-select =
     D404  # D404 - first word of the docstring should not be `This`
+
+[options.entry_points]
+console_scripts =
+    castor-runner = castor.runner:main
