Interactive latent space manipulation app

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,4 @@ extend-select =
 [options.entry_points]
 console_scripts =
     castor-runner = castor.runner:main
+    latent-space-manipulation = castor.apps.autoencoder.latent_space_manipulation:main
