--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,12 @@ repos:
       - id: check-toml
       - id: end-of-file-fixer
 
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.0
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+
   - repo: https://github.com/timothycrosley/isort
     rev: 5.10.1
     hooks:
@@ -19,7 +25,7 @@ repos:
         types: [python]
 
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.8.0
     hooks:
       - id: black
         name: black
