--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,57 @@
+[tool.poetry]
+name = "castor"
+version = "0.1.0"
+description = "CArdiac SegmenTation with cOnstRaints (CASTOR) project"
+authors = ["Nathan Painchaud <nathan.painchaud@usherbrooke.ca>"]
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/nathanpainchaud/castor"
+classifiers=[
+    "Environment :: Console",
+    "Natural Language :: English",
+    # Pick your license as you wish
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    # Specify the Python versions you support here. In particular, ensure
+    # that you indicate whether you support Python 2, Python 3 or both.
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+]
+packages = [
+    { include = "castor" },
+]
+
+[tool.poetry.dependencies]
+python = "^3.10.4"
+torch = "~1.12.0"
+torchvision = "~0.13.0"
+pytorch-lightning = "~1.7.0"
+hydra-core = "~1.2.0"
+numpy = "*"
+pandas = "*"
+h5py = "*"
+medpy = "*"
+matplotlib = "*"
+holoviews = "*"
+seaborn = "*"
+comet-ml = "*"
+vital = { path = "./vital/", develop = false }
+
+[tool.poetry.group.dev.dependencies]
+vital = { path = "./vital/", develop = true }
+pre-commit = "^2.20.0"
+isort = "==5.10.1"
+black = "==22.8.0"
+flake8 = "==3.9.2"
+flake8-docstrings = "==1.6.0"
+
+[tool.poetry.scripts]
+castor-runner = "castor.runner:main"
+latent-space-manipulation = "castor.apps.autoencoder.latent_space_manipulation:main"
+latent-space-local-distribution = "castor.apps.autoencoder.latent_space_local_distribution:main"
+latent-space-global-distribution = "castor.apps.autoencoder.latent_space_global_distribution:main"
+latent-space-attributes-sweeper = "castor.apps.autoencoder.latent_space_attributes_sweeper:main"
+
 [tool.black]
 line-length = 120
 target-version = ["py310"]
@@ -7,3 +61,7 @@ exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|buil
 profile = "black"
 line_length = 120
 src_paths = ["castor"]
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
