Fix `flake8` hook repo URL + update pre-commit hooks
- Fixes issues caused by very outdated `flake8` hook (e.g. support for newer language feature). The hook was outdated because it referred to the old Gitlab URL of the `flake8`, which was not updated past the 3.X series.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,8 +32,8 @@ repos:
         args: [--config, ./pyproject.toml]
         types: [python]
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
     hooks:
       - id: flake8
         name: flake8
