--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,11 @@ repos:
       - id: check-toml
       - id: end-of-file-fixer
 
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.0
+    hooks:
+      - id: poetry-check
+
   - repo: https://github.com/timothycrosley/isort
     rev: 5.10.1
     hooks:
@@ -19,15 +24,15 @@ repos:
         types: [python]
 
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.8.0
     hooks:
       - id: black
         name: black
         args: [--config, ./pyproject.toml]
         types: [python]
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
     hooks:
       - id: flake8
         name: flake8
