Update `vital` submodule URL to point to yhe new VITALab-owned public `vital`

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vital"]
 	path = vital
-	url = https://github.com/nathanpainchaud/vital.git
+	url = https://github.com/vitalab/vital.git
