--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "CArdiac SegmenTation with cOnstRaints (CASTOR) project"
 authors = ["Nathan Painchaud <nathan.painchaud@usherbrooke.ca>"]
 license = "Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/nathanpainchaud/castor"
+repository = "https://github.com/vitalab/castor"
 classifiers=[
     "Environment :: Console",
     "Natural Language :: English",
